--- a/public/gcintranet/samples/custom-menu-en.html
+++ b/public/gcintranet/samples/custom-menu-en.html
@@ -11,7 +11,7 @@
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
 		<!--
-			Note: a relative path is being used in this sample. In order to incorporate the script tags in your code, use the following absolute path (depending on the choice of domain). 
+			Note: a relative path is being used in this sample. In order to incorporate the script tags in your code, use the following absolute path (depending on the choice of domain).
 			This path can be used for the following three file names: soyutils.js, wet-en.js, and wet-fr.js.
 
 			ssl-templates.services.gc.ca: https://ssl-templates.services.gc.ca/app/cls/WET/gcintranet/v4_0_44/cdts/compiled/[file name]
@@ -72,7 +72,8 @@
 					}]
 				},{
 					"href": "#",
-					"text": "Link 3"
+					"text": "Link 3",
+					"acronym": "Description of abbreviation"
 				}]
 			});
 		</script>
@@ -85,7 +86,7 @@
             <ul>
                 <li>Create a custom menu in a seperate html file and the provide URL through the menuPath parameter in the appTop section of your page. </li>
                 <li>An example of an html file containing a menu can be found <a href="../ajax/custommenu-eng.html">here</a>.</li>
-            </ul>    
+            </ul>
                 <pre>
 defTop.outerHTML = wet.builder.appTop({
 ...
@@ -96,18 +97,20 @@ defTop.outerHTML = wet.builder.appTop({
             <p><b>Second method</b></p>
             <p>The second method is creating the menu in the appTop section of your page. There are a few configuration options:</p>
             <ul>
-                <li><code class="wb-prettify">"menuLinks"</code>: used to create a top navigation. You can provide the title and URL through the 'text' and 'href' parameters respectively.</li>
+                <li><code class="wb-prettify">"menuLinks"</code>: used to create a top navigation. You can provide the title and URL through the 'text' and 'href' parameters respectively.  You can specify the description for an abbreviation through the 'acronym' parameter.</li>
                 <pre>
 "menuLinks": [{
     "text": "First Section",
-    "href": "#"
+    "href": "#",
+    "acronym": "Description of abbreviation"
 }]
                 </pre>
-                <li><code class="wb-prettify">"subLinks"</code>: used to create the submenu items. These are displayed when the user hovers over the top navigation. You can provide the title and URL through the 'subtext' and 'subhref' parameters respectively.</li>
+                <li><code class="wb-prettify">"subLinks"</code>: used to create the submenu items. These are displayed when the user hovers over the top navigation. You can provide the title and URL through the 'subtext' and 'subhref' parameters respectively. You can specify the description for an abbreviation through the 'acronym' parameter.</li>
                 <pre>
 "subLinks": [{
     "subtext": "Subsection 1",
-    "subhref": "#"
+    "subhref": "#",
+    "acronym": "Description of abbreviation"
 }]
                 </pre>
             </ul>
@@ -134,10 +137,11 @@ defTop.outerHTML = wet.builder.appTop({
         }]
     },{
         "href": "#",
-        "text": "Link 3"
+        "text": "Link 3",
+        "acronym": "Description of abbreviation"
     }]
 ...
-});   
+});
             </pre>
 			<div id="def-preFooter">
 				<!-- Write closure fall-back static file -->
