Adding analytics for GCIntranet

--- a/public/gcintranet/samples/index-fr.html
+++ b/public/gcintranet/samples/index-fr.html
@@ -64,6 +64,7 @@
 			<h1 property="name" id="wb-cont">Échantillons SGDC</h1>
 			<p>Bienvenue sur les pages d'exemple CDTS. Vous trouverez ci-dessous des liens vers des exemples de pages qui montrent comment implémenter diverses fonctionnalités CDTS, ainsi que des liens utiles.</p>
 			<ul>
+				<li><a href="adobe-analytics-fr.html">Adobe Analytics</a></li>
 				<li><a href="basic-settings-fr.html">Paramètres de base</a></li>
 				<li><a href="breadcrumbs-fr.html">Fil d’Ariane</a></li>
                 <li><a href="contactlinks-fr.html">Lien de contact</a></li>
