--- a/public/gcintranet/samples/index.html
+++ b/public/gcintranet/samples/index.html
@@ -64,6 +64,7 @@
 			<h1 property="name" id="wb-cont">CDTS Samples</h1>
 			<p>Welcome to the CDTS sample pages. You will find below, links to sample pages that demonstrate how to implement various CDTS features, as well as some useful links.</p>
 			<ul>
+				<li><a href="adobe-analytics-en.html">Adobe Analytics</a></li>
 				<li><a href="basic-settings-en.html">Basic Settings</a></li>
 				<li><a href="breadcrumbs-en.html">Breadcrumbs</a></li>
                 <li><a href="contactlinks-en.html">Contact Links</a></li>
