--- a/public/gcintranet/samples/adobe-analytics-en.html
+++ b/public/gcintranet/samples/adobe-analytics-en.html
@@ -33,7 +33,7 @@
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refTop({
-				"cdnEnv": "esdcprod",
+				"cdnEnv": "prod",
                 "webAnalytics" : [{
 					// * version 1 or 2
 					//"environment" : "staging",
@@ -57,7 +57,7 @@
 		<script>
 			var defTop = document.getElementById("def-top");
 			defTop.outerHTML = wet.builder.top({
-				"cdnEnv": "esdcprod",
+				"cdnEnv": "prod",
 				"lngLinks": [{
 					"lang": "fr",
 					"href": "adobe-analytics-fr.html",
@@ -115,8 +115,8 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2021-05-25",
-					"cdnEnv": "esdcprod"
+					"dateModified": "2022-03-14",
+					"cdnEnv": "prod"
 				});
 			</script>
 		</main>
@@ -128,14 +128,14 @@
 		<script>
 			var defFooter = document.getElementById("def-footer");
 			defFooter.outerHTML = wet.builder.footer({
-				"cdnEnv": "esdcprod",
+				"cdnEnv": "prod",
 				"webAnalytics" : false
 			});
 		</script>
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refFooter({
-				"cdnEnv": "esdcprod"
+				"cdnEnv": "prod"
 			}));
 		</script>
 	</body>
