--- a/public/gcweb/samples/adobe-analytics-fr.html
+++ b/public/gcweb/samples/adobe-analytics-fr.html
@@ -33,18 +33,18 @@
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refTop({
-				"cdnEnv": "esdcprod",
-				"webAnalytics" : [{
+				"cdnEnv": "esdcprod"
+				//"webAnalytics" : [{
 					// * version 1 or 2
 					//"environment" : "staging",
 					//"version" : 1,
 					//"version" : 2,
 
 					// * version 3 custom staging
-					"custom" : "launch-EN11c0261481f74c56b7656937bbd995e9-staging.min.js"
+					//"custom" : "launch-EN11c0261481f74c56b7656937bbd995e9-staging.min.js"
 					// * version 3 custom production
 					//"custom" : "launch-EN0cf6c2810a2b48f8a4c36502a1b09541.min.js"
-				}]
+				//}]
 			}));
 		</script>
 	</head>
@@ -128,14 +128,14 @@
 		<script>
 			var defFooter = document.getElementById("def-footer");
 			defFooter.outerHTML = wet.builder.footer({
-				"cdnEnv": "esdcprod",
-				"webAnalytics" : false
+				"cdnEnv": "esdcprod"
 			});
 		</script>
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refFooter({
-				"cdnEnv": "esdcprod"
+				"cdnEnv": "esdcprod",
+				//"webAnalytics" : false
 			}));
 		</script>
 	</body>
