--- a/public/gcweb/ajax/sitemenu-en.html
+++ b/public/gcweb/ajax/sitemenu-en.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Web Experience Toolkit (WET) / BoÃ®te Ã  outils de l'expÃ©rience Web (BOEW)
+<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 <!-- DataAjaxFragmentStart -->
 <!-- secondary navigation if enabled -->
@@ -120,7 +120,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 					<li class="slflnk"><a href="https://www.canada.ca/en/services.html">All services</a></li>
 				</ul>
 			</li>
-			
+
 		</ul>
 	</div>
 </div>
