Fixing missed character

--- a/public/global/esdcmenu-fra.html
+++ b/public/global/esdcmenu-fra.html
@@ -139,7 +139,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <ul class="sm list-unstyled" id="mnuLiens" role="menu">
           <li><a href="https://portal-portail.tbs-sct.gc.ca/home-fra.aspx">Application de gestion du rendement</a></li>
           <li><a href="https://gcintranet.tpsgc-pwgsc.gc.ca/gc/index-fra.html">Applications Web de la rémunération</a></li>
-          <!--<li><a href="https://iservice.prv/fra/si/securite/outils_et_ressources/trousse_outils/index.shtml">Boîte à outils des mesures faciles pour les employÃ©s et les gestionnaires</a></li>-->
+          <!--<li><a href="https://iservice.prv/fra/si/securite/outils_et_ressources/trousse_outils/index.shtml">Boîte à outils des mesures faciles pour les employés et les gestionnaires</a></li>-->
           <li><a href="https://nscc-cnas.pwgsc-tpsgc.gc.ca/index-fra.cfm">Centre national d'appels de service</a></li>
           <li><a href="http://hrsc-csrh.prv/webforms/Home.aspx">Centre de services en ressources humaines</a></li>
           <li><a href="http://forms-formulaires.prv/lc/content/EForms/fr/Accueil.html">Formulaires électroniques</a></li>
