--- a/public/global/esdcmenu1-eng.html
+++ b/public/global/esdcmenu1-eng.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Web Experience Toolkit (WET) / BoÃ®te Ã  outils de l'expÃ©rience Web (BOEW)
+<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 <!-- DataAjaxFragmentStart -->
 <!-- secondary navigation if enabled -->
@@ -20,7 +20,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
         <ul class="sm list-unstyled" id="mnuOur" role="menu">
           <li><a href="https://esdc.prv/en/department/ibp/index.shtml">Strategic Framework</a></li>
           <li><a href="https://esdc.prv/en/department/structure/index.shtml">Organizational Structure</a></li>
-          <li><a href="https://esdc.prv/en/csb/bmec-esdc-portfolio-committee-governance-structure.shtml">Corporate Committees</a></li>
+          <li><a href="https://esdc.prv/en/csb/connections/corpsec/bmec/ec/committee-governance-structure.shtml">Corporate Committees</a></li>
           <li><a href="https://esdc.prv/en/department/champions/index.shtml">Champions</a></li>
           <li><a href="https://esdc.prv/en/department/esdccc/index.shtml">ESDC Charitable Campaign</a></li>
           <li><a href="https://esdc.prv/en/department/service-strategy/index.shtml">Our Service Transformation</a></li>
@@ -69,7 +69,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 			</li>
            <li>
             <details>
-              <summary>Labour Program</summary> 
+              <summary>Labour Program</summary>
               <ul role="menu">
                 <li class="slflnk"><a href="https://esdc.prv/en/labour/index.shtml">Labour - Home</a></li>
                 <li><a href="https://esdc.prv/en/labour/organization/index.shtml#admcopd">Compliance, Operations, and Program Development</a></li>
@@ -99,7 +99,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
                 <li><a href="https://iservice.prv/eng/new_employee/index.shtml">I Am a New Employee</a></li>
                 <li><a href="https://iservice.prv/eng/official_languages/index.shtml">Official Languages</a></li>
                 <li><a href="https://iservice.prv/eng/hr/pla/index.shtml">Performance Management</a></li>
-                  
+
                 <li><a href="http://sgpe-pmps.prv/sgr-rms/h.4m.2@-eng.jsp">Publications (Publicentre)</a></li>
 				<li><a href="http://service-wiki.prv/index.php/Main_Page">Service Wiki</a></li>
                 <li><a href="https://iservice.prv/eng/stewardship_information/index.shtml">Stewardship of Information</a></li>
