Adding analytics for GCIntranet (#451)
* Adding analytics for GCIntranet

* Fixing samples

* Fixing samples

* Update samples

--- a/public/gcintranet/samples/adobe-analytics-fr.html
+++ b/public/gcintranet/samples/adobe-analytics-fr.html
@@ -14,15 +14,13 @@
 			Remarque : un chemin relatif est utilisé dans cet exemple. Afin d'intégrer les balises de script dans votre code, utilisez le chemin absolu suivant (selon le choix du domaine).
 			Ce chemin peut être utilisé pour les trois noms de fichiers suivants : soyutils.js, wet-en.js et wet-fr.js.
 
-			canada.ca : https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/[file name]
-			ssl-templates.services.gc.ca : https://ssl-templates.services.gc.ca/app/cls/WET/gcweb/v4_0_44/cdts/compiled/[file name]
-			templates.service.gc.ca : https://templates.service.gc.ca/app/cls/WET/gcweb/v4_0_44/cdts/compiled/[file name]
+			ssl-templates.services.gc.ca : https://ssl-templates.services.gc.ca/app/cls/WET/gcintranet/v4_0_44/cdts/compiled/[file name]
+			templates.service.gc.ca : https://templates.service.gc.ca/app/cls/WET/gcintranet/v4_0_44/cdts/compiled/[file name]
 
 			Pour pointer vers la version d'exécution :
 
-			canada.ca : https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/[file name]
-			ssl-templates.services.gc.ca : https://ssl-templates.services.gc.ca/rn/cls/WET/gcweb/cdts/compiled/[file name]
-			templates.service.gc.ca : https://templates.service.gc.ca/rn/cls/WET/gcweb/cdts/compiled/[file name]
+			ssl-templates.services.gc.ca : https://ssl-templates.services.gc.ca/rn/cls/WET/gcintranet/cdts/compiled/[file name]
+			templates.service.gc.ca : https://templates.service.gc.ca/rn/cls/WET/gcintranet/cdts/compiled/[file name]
 		-->
 		<script src="../compiled/soyutils.js"></script>
 		<script src="../compiled/wet-fr.js"></script>
@@ -33,7 +31,7 @@
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refTop({
-				"cdnEnv": "esdcprod"
+				"cdnEnv": "prod"
 				/*"webAnalytics" : [{
 					// * version 1 or 2
 					//"environment" : "staging",
@@ -57,7 +55,7 @@
 		<script>
 			var defTop = document.getElementById("def-top");
 			defTop.outerHTML = wet.builder.top({
-				"cdnEnv": "esdcprod",
+				"cdnEnv": "prod",
 				"lngLinks": [{
 					"lang": "en",
 					"href": "adobe-analytics-en.html",
@@ -115,8 +113,8 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"cdnEnv": "esdcprod",
-					"dateModified": "2021-05-18"
+					"cdnEnv": "prod",
+					"dateModified": "2022-03-14"
 				});
 			</script>
 		</main>
@@ -128,13 +126,13 @@
 		<script>
 			var defFooter = document.getElementById("def-footer");
 			defFooter.outerHTML = wet.builder.footer({
-				"cdnEnv": "esdcprod"
+				"cdnEnv": "prod"
 			});
 		</script>
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refFooter({
-				"cdnEnv": "esdcprod",
+				"cdnEnv": "prod",
 				//"webAnalytics" : true
 			}));
 		</script>
