--- a/public/gcintranet/samples/adobe-analytics-en.html
+++ b/public/gcintranet/samples/adobe-analytics-en.html
@@ -14,15 +14,13 @@
 			Note: a relative path is being used in this sample. In order to incorporate the script tags in your code, use the following absolute path (depending on the choice of domain).
 			This path can be used for the following three file names: soyutils.js, wet-en.js, and wet-fr.js.
 
-			canada.ca: https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/[file name]
-			ssl-templates.services.gc.ca: https://ssl-templates.services.gc.ca/app/cls/WET/gcweb/v4_0_44/cdts/compiled/[file name]
-			templates.service.gc.ca: https://templates.service.gc.ca/app/cls/WET/gcweb/v4_0_44/cdts/compiled/[file name]
+			ssl-templates.services.gc.ca: https://ssl-templates.services.gc.ca/app/cls/WET/gcintranet/v4_0_44/cdts/compiled/[file name]
+			templates.service.gc.ca: https://templates.service.gc.ca/app/cls/WET/gcintranet/v4_0_44/cdts/compiled/[file name]
 
 			To point to the run version:
 
-			canada.ca: https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/[file name]
-			ssl-templates.services.gc.ca: https://ssl-templates.services.gc.ca/rn/cls/WET/gcweb/cdts/compiled/[file name]
-			templates.service.gc.ca: https://templates.service.gc.ca/rn/cls/WET/gcweb/cdts/compiled/[file name]
+			ssl-templates.services.gc.ca: https://ssl-templates.services.gc.ca/rn/cls/WET/gcintranet/cdts/compiled/[file name]
+			templates.service.gc.ca: https://templates.service.gc.ca/rn/cls/WET/gcintranet/cdts/compiled/[file name]
 		-->
 		<script src="../compiled/soyutils.js"></script>
 		<script src="../compiled/wet-en.js"></script>
@@ -33,7 +31,7 @@
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refTop({
-				"cdnEnv": "esdcprod"
+				"cdnEnv": "prod"
 				/*"webAnalytics" : [{
 					// * version 1 or 2
 					//"environment" : "staging",
@@ -57,7 +55,7 @@
 		<script>
 			var defTop = document.getElementById("def-top");
 			defTop.outerHTML = wet.builder.top({
-				"cdnEnv": "esdcprod",
+				"cdnEnv": "prod",
 				"lngLinks": [{
 					"lang": "fr",
 					"href": "adobe-analytics-fr.html",
@@ -115,8 +113,8 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2021-05-25",
-					"cdnEnv": "esdcprod"
+					"dateModified": "2022-03-14",
+					"cdnEnv": "prod"
 				});
 			</script>
 		</main>
@@ -128,13 +126,13 @@
 		<script>
 			var defFooter = document.getElementById("def-footer");
 			defFooter.outerHTML = wet.builder.footer({
-				"cdnEnv": "esdcprod"
+				"cdnEnv": "prod"
 			});
 		</script>
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refFooter({
-				"cdnEnv": "esdcprod",
+				"cdnEnv": "prod",
 				//"webAnalytics" : true
 			}));
 		</script>
