--- a/public/gcintranet/samples/exitscript-fr.html
+++ b/public/gcintranet/samples/exitscript-fr.html
@@ -96,14 +96,14 @@ document.write(wet.builder.refFooter({
 				<h2>Exemple</h2>
 				<ul class="lst-spcd">
 					<li>
-						Ce lien <a href="https://csszengarden.com/219">https://csszengarden.com/219</a> 
-						a un nom de domaine (csszengarden.com) différent du vôtre.
+						Ce lien <a href="https://www.google.ca/">https://www.google.ca/</a>
+						a un nom de domaine (google.ca) différent du vôtre.
 						Vous serez redirigé sur la page <code>exiturl-fr.html</code> Vous serez redirigé sur la page <code>exitURL</code> contient la valeur <code>exiturl-fr.html</code>.
 					</li>
 					<li>
-						Ce lien <a target="_blank" href="https://www.w3schools.com">https://www.w3schools.com</a> 
+						Ce lien <a target="_blank" href="https://www.w3schools.com">https://www.w3schools.com</a>
 						s'ouvrira dans une autre fenêtre. Avec le paramètre targetWarning, vous pouvez définir un message qui avertira les utilisateurs que le lien s'ouvrira dans une autre fenêtre.
-						Ce message ajoutera le message d'affichage existant. 
+						Ce message ajoutera le message d'affichage existant.
 					</li>
 					<li>
 						Ce lien <a href="breadcrumbs-fr.html"> breadcrumbs-fr.
@@ -111,11 +111,11 @@ document.write(wet.builder.refFooter({
 						Vous ne serez pas redirigé vers <code>exiturl-fr.html</code>.
 					</li>
 					<li>
-						Ce lien <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG">https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG</a> 
+						Ce lien <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG">https://developer.mozilla.org/en-US/docs/Web/Accessibility/Understanding_WCAG</a>
 						a son nom d'hôte (developer.mozilla.org) dans la liste des exceptions <code>exitDomains</code>.
 						Vous ne serez pas redirigé vers <code>exiturl-fr.html</code>.
 					</li>
-				</ul>					
+				</ul>
 			</section>
 			<div id="def-preFooter">
 				<!-- Write closure fall-back static file -->
@@ -138,7 +138,7 @@ document.write(wet.builder.refFooter({
 		<script>
 			var defFooter = document.getElementById("def-footer");
 			defFooter.outerHTML = wet.builder.footer({
-				"cdnEnv": "prod"				
+				"cdnEnv": "prod"
 			});
 		</script>
 		<!-- Write closure template -->
