--- a/test/html/gcweb/template-gcweb-en.html
+++ b/test/html/gcweb/template-gcweb-en.html
@@ -28,6 +28,14 @@
             top: "~top~",
             preFooter: "~preFooter~",
             footer: "~footer~",
+            onCDTSPageFinalized: function () { //TODO: Remove commentted-out script at end of page
+                if (typeof $ !== 'undefined') {
+                    $(document).on("wb-ready.wb", function (event) {
+                        $("#wb-cont").after('<a name="wetInitializedMarker" id="wetInitializedMarker"></a>');
+                    });
+                }
+                //wet.builder.appendExtraHTML('<script src=\'https://blabla/bla.js\' />');
+            },
         });
     </script>
 </head>
@@ -48,11 +56,12 @@
         <!-- Write closure fall-back static file -->
         <!-- footer-en.html -->
     </div>
-    <script>
+    <!-- This is where refFooter is -->
+    <!--<script>
         $(document).on("wb-ready.wb", function (event) {
             $("#wb-cont").after('<a name="wetInitializedMarker" id="wetInitializedMarker"></a>');
         });
-    </script>
+    </script>-->
 </body>
 
 </html>
