--- a/test/html/gcintranet/template-exitscript-en.html
+++ b/test/html/gcintranet/template-exitscript-en.html
@@ -1,88 +1,86 @@
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js" lang="en" dir="ltr"><!--<![endif]-->
-	<head>
-		<meta charset="utf-8">
-		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Content page - Canada.ca</title>
-		<meta content="width=device-width,initial-scale=1" name="viewport">
-		<!-- Meta data -->
-		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
-		<!-- Meta data-->
-		<!-- Load closure template scripts -->
-		<script src="../compiled/soyutils.js"></script>
-		<script src="../compiled/wet-en.js"></script>
-		<noscript>
-			<!-- Write closure fall-back static file -->
-			<!-- refTop.html -->
-		</noscript>
-		<!-- Write closure template -->
-		<script>
-			document.write(wet.builder.refTop("~refTop~"));
-		</script>
-	</head>
-	<body vocab="http://schema.org/" typeof="WebPage">
-		<div id="def-top">
-			<!-- Write closure fall-back static file -->
-			<!-- top-en.html -->
-		</div>
-		<!-- Write closure template -->
-		<script>
-			var defTop = document.getElementById("def-top");
-			defTop.outerHTML = wet.builder.top("~top~");
-		</script>
-		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
-			<h1 property="name" id="wb-cont">Content page</h1>
-			<section>
-				<h2>Leaving a secure site</h2>
-				<ul class="lst-spcd">
-					<li>
-						This link <a href="https://www.google.ca">https://www.google.ca</a> 
-						will display a warning because his hostname (google.ca) is different from yours.
-						You'll be redirect to the <code>exiturl-en.html</code> page because the <code>exitURL</code> parameter contains the value <code>exiturl-en.html</code>.
-					</li>
-					<li>
-						This link <a target="_blank" href="https://www.google.ca">https://www.google.ca</a> 
-						will open in another window. Through the targetWarning parameter, you can set a message that will warn users that the link will open in another window.
-						This message will append the existing display message. 
-					</li>
-					<li>
-						This link <a href="breadcrumbs-en.html"> breadcrumbs-en.html </a> 
-						won't display a warning because it has the same hostname as yours.
-					</li>
-					<li>
-						This link <a href="https://google.com">https://google.com</a> 
-						won't display a warning because his hostname (google.com) is in the exception list <code>exitDomains</code>.
-					</li>
-				</ul>
-			</section>
-			<div id="def-preFooter">
-				<!-- Write closure fall-back static file -->
-				<!-- preFooter-en.html -->
-			</div>
-			<!-- Write closure template -->
-			<script>
-				var defPreFooter = document.getElementById("def-preFooter");
-				defPreFooter.outerHTML = wet.builder.preFooter("~preFooter~");
-			</script>
-		</main>
-		<div id="def-footer">
-			<!-- Write closure fall-back static file -->
-			<!-- footer-en.html -->
-		</div>
-		<!-- Write closure template -->
-		<script>
-			var defFooter = document.getElementById("def-footer");
-			defFooter.outerHTML = wet.builder.footer("~footer~");
-		</script>
-		<!-- Write closure template -->
-		<script>
-			document.write(wet.builder.refFooter("~refFooter~"));
-		</script>
-		<script>
-            $( document ).on( "wb-ready.wb", function( event ) {
-                $("#wb-cont").after('<a name="wetInitializedMarker" id="wetInitializedMarker"></a>');
-            });
-		</script>
-	</body>
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en" dir="ltr">
+<!--<![endif]-->
+
+<head>
+    <meta charset="utf-8">
+    <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+    <title>Content page - Canada.ca</title>
+    <meta content="width=device-width,initial-scale=1" name="viewport">
+    <!-- Meta data -->
+    <meta name="description"
+        content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
+    <!-- Meta data-->
+    <!-- Load closure template scripts -->
+    <link rel="stylesheet" href="../cdts-~~subTheme~~styles.css">
+    <script src="../compiled/wet-en.js"></script>
+    <noscript>
+        <!-- Write closure fall-back static file -->
+        <!-- refTop.html -->
+    </noscript>
+    <!-- Write closure template -->
+    <script>
+        wet.builder.setup({
+            cdnEnv: "~cdnEnv~",
+            base: "~refTop~",
+            top: "~top~",
+            preFooter: "~preFooter~",
+            footer: "~footer~",
+            onCDTSPageFinalized: function () {
+                if (typeof $ !== 'undefined') {
+                    $(document).on("wb-ready.wb", function (event) {
+                        $("#wb-cont").after('<a name="wetInitializedMarker" id="wetInitializedMarker"></a>');
+                    });
+                }
+            },
+        });
+    </script>
+</head>
+
+<body vocab="http://schema.org/" typeof="WebPage">
+    <div id="cdts-def-top">
+        <!-- Write closure fall-back static file -->
+        <!-- top-en.html -->
+    </div>
+    <main property="mainContentOfPage" typeof="WebPageElement" class="container">
+        <h1 property="name" id="wb-cont">Content page</h1>
+        <section>
+            <h2>Leaving a secure site</h2>
+            <ul class="lst-spcd">
+                <li>
+                    This link <a href="https://www.google.ca">https://www.google.ca</a>
+                    will display a warning because his hostname (google.ca) is different from yours.
+                    You'll be redirect to the <code>exiturl-en.html</code> page because the <code>exitURL</code>
+                    parameter contains the value <code>exiturl-en.html</code>.
+                </li>
+                <li>
+                    This link <a target="_blank" href="https://www.google.ca">https://www.google.ca</a>
+                    will open in another window. Through the targetWarning parameter, you can set a message that will
+                    warn users that the link will open in another window.
+                    This message will append the existing display message.
+                </li>
+                <li>
+                    This link <a href="breadcrumbs-en.html"> breadcrumbs-en.html </a>
+                    won't display a warning because it has the same hostname as yours.
+                </li>
+                <li>
+                    This link <a href="https://google.com">https://google.com</a>
+                    won't display a warning because his hostname (google.com) is in the exception list
+                    <code>exitDomains</code>.
+                </li>
+            </ul>
+        </section>
+        <div id="cdts-def-preFooter">
+            <!-- Write closure fall-back static file -->
+            <!-- preFooter-en.html -->
+        </div>
+    </main>
+    <div id="cdts-def-footer">
+        <!-- Write closure fall-back static file -->
+        <!-- footer-en.html -->
+    </div>
+</body>
+
 </html>
